--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>	
+
 			<link rel="stylesheet" href="estilos.css" type="text/css" media="all">
-			<center><big><h1>El cambio climático</h1></big></center><hr/>
+			<center><big><h1>El cambio clim&aacute;tico</h1></big></center><hr/>
 			<title>El cambio climático</title>
 
 			<div id="header"><br>
@@ -61,31 +62,43 @@
 			<a href="causas.html">Causas</a>
 			<a href="consecuencias.html">Consecuencias</a>
 			<a href="soluciones.html">Soluciones</a>
- 
+			
 			</div>
 			</div>
 			
+		<p> 
+			<audio src="indexaudio.mp3" controls autoplay>
+		</p>
+		
 		<p>	
-			<img src="index2.jpg" style="float:left;" border="1" width="29%"></br>
-			<img src="index1.jpg" style="float:right;" border="1" width="29%"></br>
+			<div>
 
-			 <center>
-			<h3>El cambio climático es el término general para el<br/>  cambio en los fenómenos climáticos mundiales
-			 asociados con un aumento  en las temperaturas promedio globales.<br/>
-			 Es real y las temperaturas han estado subiendo alrededor del mundo por muchas décadas.<br/>
+			<img src="index1.jpg" style="float:right;" border="2" width="37%"></br>
 
-			<i>"El cambio climático constituye la mayor amenaza <br/> medioambiental a la que se enfrenta la humanidad."</i></h3>
-			</center>
+			</div>
+			<center><h2><u>¿Qué es el cambio climático?</u></h2></center>
+				<FONT SIZE=4>
+					<p>
+					El cambio climático es el término general para el cambio en los fenómenos climáticos mundiales
+			 		asociados con un aumento  en las temperaturas promedio globales.
+					Es real y las temperaturas han estado subiendo alrededor del mundo por muchas décadas.
+					</p>
+					<p>
+					Es uno de los mayores desafíos de nuestro tiempo. Las alteraciones en los patrones de los eventos climatológicos y 
+					las temperaturas extremas son cada vez más comunes y aumentarán si hay una mayor concentración de gases de efecto invernadero. 
+					El cambio climático pone en riesgo la salud, la seguridad alimentaria y energética,
+					 así como el acceso al agua de millones de personas.</br>
+					<i>"El cambio climático constituye la mayor amenaza medioambiental a la que se enfrenta la humanidad."</i>
+					</p>
+				</font>
+
 			
 		</p>
-		<p>
-		</p>
-		<p>
-		</p>
+		
 
 		<p>
 			<center>
-			<h2>Evidencia global del cambio climático</h2>
+			<h2><u>Evidencia global del cambio climático</u></h2>
 			</center>
 			<table width="100%" border="0">
 				<tr>
@@ -106,12 +119,16 @@
 
 		
 		
+		<p> <center><h3><u>Vídeo explicativo acerca del cambio climatico</u><h3></center></p>
+		
+
 		<p>
 			<center>
-			<iframe width="794" height="447" width="35%" src="https://www.youtube.com/embed/1uU5qathCus" frameborder="0" allow="accelerometer; autoplay; encrypted-media;
- 			gyroscope; picture-in-picture" allowfullscreen ></iframe>
+			<iframe width="350" height="175"  src="https://www.youtube.com/embed/1uU5qathCus" frameborder="0" allow="accelerometer; autoplay; encrypted-media;
+ 			gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</center>
 		</p>
+		
 
    <body background="fondo1.jpg">
 
