--- a/causas.html
+++ b/causas.html
@@ -1,8 +1,8 @@
 <html>
 	<head>	
 		<link rel="stylesheet" href="estilos.css" type="text/css" media="all">
-		<center><h1>Causas del cambio climático</h1>
-		<title>Causas del cambio climático</title></center><hr/>
+		<center><h1>Causas del cambio clim&aacute;tico</h1>
+		<title>Causas del cambio clim&aacute;tico</title></center><hr/>
 
 
 
@@ -56,7 +56,7 @@
 			
 
 			<div class="dropdown">
-			<button class="dropbtn">Otras páginas</button>
+			<button class="dropbtn">Otras p&aacute;ginas</button>
 			<div class="dropdown-content">
  
 			<a href="index.html">Index</a>
@@ -65,58 +65,62 @@
  
 			</div>
 			</div>
+		
+			<p> 
+			<audio src="indexaudio.mp3" controls autoplay>
+			</p>
 
 
 			<img src="causas1.jpg" style="float:right;" border="3" width="38%"></br>
 		<p>	
-			<big>Hay gran cantidad de factores que producen el cambio climático,
-				 éste ha sido desencanedado por:</big>
+			<h2>Hay gran cantidad de factores que producen el cambio clim&aacute;tico,
+				 &eacute;ste ha sido desencanedado por:</h2>
 		</p>
 
 
  		<p>
 		<big><li><b><u>El aumento de gases de efecto invernadero:</u></b></li></big><br/>
 			<ol>
-				<li>Dióxido de carbono (CO2)</li><br/>
+				<li>Di&oacute;xido de carbono (CO2)</li><br/>
 				<li>Metano (CH4)</li><br/>
 				<li>Compuestos halogenados</li> <br/>
 				<li>Ozono troposférico (O3)</li><br/>
-				<li>Óxido de nitrógeno (N2O)</li><br/>
+				<li>Óxido de nitr&oacute;geno (N2O)</li><br/>
 			
-				Estos compuestos son provocados principalmente por la quema de combustibles fósiles, por el transporte, la ganadería,la industria del carbón,<br/>
-		 		la actividad química o el tratamiento de aguas residuales.<br/>
+				Estos compuestos son provocados principalmente por la quema de combustibles f&oacute;siles, por el transporte, la ganadería,la industria del carb&oacute;n,<br/>
+		 		la actividad qu&iacute;mica o el tratamiento de aguas residuales.<br/>
 			</ol>
 		</p>
 
 
 		<p>
-		<big><li><b><u>La deforestación:</u></b></li></big><br/>
+		<big><li><b><u>La deforestaci&oacute;n:</u></b></li></big><br/>
 			<ol>
-			<li>Los bosques son sumideros naturales de carbono que mediante la fotosíntesis absorben CO2 y devuelven oxígeno a la atmósfera.</li><br/>
-			<li>La deforestación se relaciona con el cambio climático pues cada vez que se pierden bosques se liberan gases de efecto invernadero,<br/>
-			 	como CO2, que estaban cubiertos bajo los árboles. Además, se provoca desabasto de agua y pérdida de biodiversidad.</li><br/>
-			<li>Cada vez que se pierde un bosque se liberan 300 mil millones de toneladas de dióxido de carbono,<br/>
-				 equivalente a 40 veces las emisiones anuales de este gas por quemar combustibles fósiles como carbón o petróleo.</li><br/>
-			<li>El 20% de las emisiones de gases de efecto invernadero a nivel mundial provienen de la pérdida de ecosistemas forestales,<br/>
-				 pues cada año se pierden cerca de 13 millones de hectáreas.</li><br/>
+			<li>Los bosques son sumideros naturales de carbono que mediante la fotos&iacute;ntesis absorben CO2 y devuelven ox&iacute;geno a la atm&oacute;sfera.</li><br/>
+			<li>La deforestación se relaciona con el cambio clim&aacute;tico pues cada vez que se pierden bosques se liberan gases de efecto invernadero,<br/>
+			 	como CO2, que estaban cubiertos bajo los árboles. Adem&aacute;s, se provoca desabasto de agua y p&eacute;rdida de biodiversidad.</li><br/>
+			<li>Cada vez que se pierde un bosque se liberan 300 mil millones de toneladas de di&oacute;xido de carbono,<br/>
+				 equivalente a 40 veces las emisiones anuales de este gas por quemar combustibles f&oacute;siles como carb&oacute;n o petr&oacute;leo.</li><br/>
+			<li>El 20% de las emisiones de gases de efecto invernadero a nivel mundial provienen de la p&eacute;rdida de ecosistemas forestales,<br/>
+				 pues cada a&ntilde;o se pierden cerca de 13 millones de hect&aacute;reas.</li><br/>
 			</ol>
 		</p>
 
 
 		<p>
-		<big><li><b><u>La destrucción de ecosistemas marinos:</u></b></li></big><br/>
+		<big><li><b><u>La destrucci&oacute;n de ecosistemas marinos:</u></b></li></big><br/>
 			<ol>
-				Los océanos también son sumideros de carbono, absorbiendo hasta el 50 % del CO2 generado. Además de su destrucción, 
-				el problema es que cuando alcanzan su límite, el océano se acidifica y se producen muertes y enfermedades de la flora y fauna marina.<br/>
+				Los oc&eacute;anos tambi&eacute;n son sumideros de carbono, absorbiendo hasta el 50 % del CO2 generado. Adem&aacute;s de su destrucci&oacute;n, 
+				el problema es que cuando alcanzan su l&iacute;mite, el oc&eacute;ano se acidifica y se producen muertes y enfermedades de la flora y fauna marina.<br/>
 			</ol>
 		</p>
 
 
 		</p>
-		<big><li><b><u>Aumento de la población:</u></b></li></big><br/>
+		<big><li><b><u>Aumento de la poblaci&oacute;n:</u></b></li></big><br/>
 			<ol>
-			Una población cada vez más numerosa necesita cada vez más recursos,<br/>
-			 lo que acelera el aumento de la emisión de gases de efecto invernadero en todos los procesos de producción.<br/>
+			Una poblaci&oacute;n cada vez m&aacute;s numerosa necesita cada vez m&aacute;s recursos,<br/>
+			 lo que acelera el aumento de la emisión de gases de efecto invernadero en todos los procesos de producci&aacute;n.<br/>
 			</ol>
 		</p>
 
