--- a/consecuencias.html
+++ b/consecuencias.html
@@ -3,9 +3,9 @@
 	<head>	
 
 			<link rel="stylesheet" href="estilos.css" type="text/css" media="all">	
-			<center><h1>Consecuencias del cambio climático</h1>
+			<center><h1>Consecuencias del cambio clim&aacute;tico</h1>
 
-			<title>Consecuencias del cambio climático</title></center><hr/>
+			<title>Consecuencias del cambio clim&aacute;tico</title></center><hr/>
 	
 
 		<div id="header"><br>
@@ -58,7 +58,7 @@
 			
 
 			<div class="dropdown">
-			<button class="dropbtn">Otras páginas</button>
+			<button class="dropbtn">Otras p&aacute;ginas</button>
 			<div class="dropdown-content">
  
 			<a href="index.html">Index</a>
@@ -68,13 +68,17 @@
 			</div>
 			</div>
 
+		<p> 
+			<audio src="indexaudio.mp3" controls autoplay>
+		</p>
+
 
 		
 		<p>
-		<img src="consecuencias1.jpg" style="float:right;" border="1" width="29%"></br>	 
+		<img src="consecuencias1.jpg" style="float:right;" border="1.3" width="29%"></br>	 
 
-		<li><big><b>Como consecuencia del cambio climático, se dan algunos problemas
-				 meteorológicos, sociales, económicos como:</b></big><br/></li>	
+		<li><big><b>Como consecuencia del cambio clim&aacute;tico, se dan algunos problemas
+				 meteorol&oacute;gicos, sociales, econ&oacute;micos como:</b></big><br/></li>	
 
 			<ol>
 				<li>-El aumento de la temperatura global en 2016 fue
@@ -82,7 +86,7 @@
 		
 				<li>-La subida del nivel del mar.</li><br/>
 			
-				<li>-El progresivo deshielo de las masas glaciares, como el Ártico.</li><br/>
+				<li>-El progresivo deshielo de las masas glaciares, como el &Aacute;rtico.</li><br/>
 	
 		</ol>
 
@@ -91,26 +95,26 @@
 
 	
 		<p>
-		<li><big><b>Pero hoy también estamos viendo los impactos económicos y sociales, que serán cada vez más graves, como:</b></big><br/>
+		<li><big><b>Pero hoy tambi&eacute;n estamos viendo los impactos econ&oacute;micos y sociales, que ser&aacute;n cada vez m&aacute;s graves, como:</b></big><br/>
 
 </li>		
 			<ol>
-				<li>-Daños en las cosechas y en la producción alimentaria.</li><br/>
+				<li>-Da&ntilde;os en las cosechas y en la producción alimentaria.</li><br/>
 		
-				<li>-Las sequías.</li><br/>
+				<li>-Las sequ&iacute;as.</li><br/>
 		
 				<li>-Los riesgos en la salud.</li><br/>
 	
-				<li>-Los fenómenos meteorológicos extremos, como tormentas y huracanes.</li><br/>
+				<li>-Los fen&oacute;menos meteorol&oacute;gicos extremos, como tormentas y huracanes.</li><br/>
 			</ol>
 		</p>
 
 
 		<p>
-		<li><big><b>Todo esto puede llegar a producir catástrofes mundiales como:</b></big><br/></li>
+		<li><big><b>Todo esto puede llegar a producir cat&aacute;strofes mundiales como:</b></big><br/></li>
 			<ol>
-				<li>-Guerras por sequía y falta de agua.</li><br/>
-				<li>-Desplazamientos de personas por inundaciones(refugiados climáticos).</li><br/>
+				<li>-Guerras por sequ&iacute;a y falta de agua.</li><br/>
+				<li>-Desplazamientos de personas por inundaciones(refugiados clim&aacute;ticos).</li><br/>
 				<li>-Poca seguridad alimentaria.</li>
 
 <br/>
@@ -119,25 +123,26 @@
 			<div>
 		<p>
 			<center>
-			<table border="1">
-			<caption><b><big>Tabla en la que podemos observar el aumento de temperaturas:</big></b></caption>
+			
+			<table border="2">
+			<caption><h2><u>Tabla en la que podemos observar el aumento de temperaturas:</u></h2></caption>
 	
 			<tr>
-			<td><b>Años:</b></td>
-			<td>1901-10</td>
-			<td>1911-20</td>
-			<td>1921-30</td>
-			<td>1931-40</td>
-			<td>1941-50</td>
-			<td>1951-60</td>
-			<td>1961-70</td>
-			<td>1971-80</td>
-			<td>1981-90</td>
-			<td>1991-20</td>
-			<td>2001-10</td>
+			<td><big><b>Años:</b></big></td>
+			<td>1901-1910</td>
+			<td>1911-1920</td>
+			<td>1921-1930</td>
+			<td>1931-1940</td>
+			<td>1941-1950</td>
+			<td>1951-1960</td>
+			<td>1961-1970</td>
+			<td>1971-1980</td>
+			<td>1981-1990</td>
+			<td>1991-1920</td>
+			<td>2001-2010</td>
 			</tr>
 			<tr>
-			<td><b>Temperatura media global:</b></td>
+			<td><big><b>Temperatura </br> media global:</b></big></td>
 			<td>13.59</td>
 			<td>13.64</td>
 			<td>13.76</td>
@@ -150,6 +155,7 @@
 			<td>14.26</td>
 			<td>14.47</td>
 			</tr>
+			
 			</center>
 		</p>
 			</div>
