--- a/soluciones.html
+++ b/soluciones.html
@@ -1,8 +1,8 @@
 <html>
 	<head>	
 		<link rel="stylesheet" href="estilos.css" type="text/css" media="all">
-		<center><h1>Soluciones al cambio climático</h1>
-		<title>Soluciones al cambio climático</title></center><hr/>
+		<center><h1>Soluciones al cambio clim&aacute;tico</h1>
+		<title>Soluciones al cambio clim&aacute;tico</title></center><hr/>
 
 		<div id="header"><br>
 			</div>
@@ -53,7 +53,7 @@
 
 
 			<div class="dropdown">
-			<button class="dropbtn">Otras páginas</button>
+			<button class="dropbtn">Otras p&aacute;ginas</button>
 			<div class="dropdown-content">
  
 			<a href="index.html">Index</a>
@@ -63,11 +63,15 @@
 			</div>
 			</div>
 
+		<p> 
+			<audio src="indexaudio.mp3" controls autoplay>
+		</p>
+
 		<img src="soluciones1.jpg" style="float:right;" border="3" width="29%"></br>
 	
 			
 		<p>	 
-			<h1><u>¿Qué podemos hacer para frenar el cambio climático?</u></h1>
+			<h2><u>&#191;Qu&eacute; podemos hacer para frenar el cambio clim&aacute;tico?</u></h2>
 			<ol>
 		</p>
 		
@@ -76,39 +80,39 @@
 		</p>
 			<li><big><b>Consume electricidad verde</b></big><br/>
 				Poder consumir electricidad procedente de fuentes renovables en tu hogar, es sencillo,
-				 rápido y sin mayor coste. Cambia de compañía suministradora<br/> y con un simple trámite, harás mucho por el medio ambiente. 
-				Siéntete a gusto en casa sabiendo que tu energía es verde.</li>
+				 r&aacute;pido y sin mayor coste. Cambia de compa&ntilde;&iacute;a suministradora<br/> y con un simple tr&aacute;mite, har&aacute;s mucho por el medio ambiente. 
+				Si&eacute;ntete a gusto en casa sabiendo que tu energ&iacute;a es verde.</li>
 		</p>
 		<p>
 			<li><big><b>Recicla, reduce y reutiliza</b></big><br/>
 
-				Cada año consumimos el equivalente a 1,4 planetas. Esto significa la Tierra necesita 1 año y 5 meses para regenerar lo consumido. <br/>
-				En España este déficit ecológico es de 3,4 veces. Reciclar, reducir y reutilizar es un acto
-				 de eficiencia en materiales, energía y dinero.</li>
+				Cada a&ntilde;o consumimos el equivalente a 1,4 planetas. Esto significa la Tierra necesita 1 a&ntilde;o y 5 meses para regenerar lo consumido. <br/>
+				En Espa&ntilde;a este d&eacute;ficit ecol&oacute;gico es de 3,4 veces. Reciclar, reducir y reutilizar es un acto
+				 de eficiencia en materiales, energ&iacute;a y dinero.</li>
 		</p>
 		<p>
 
 
-			<li><big><b>Ahorra y se más eficiente en el transporte</b></big><br/>
+			<li><big><b>Ahorra y se m&aacute;s eficiente en el transporte</b></big><br/>
 
-				Cuando tengas que hacer un desplazamiento en coche, recuerda que para desplazarte tú,<br/> 
-				también tienes que trasladar alrededor de 1.200 Kg., con el consiguiente derroche de energía.
-				 Así que recomendamos que antes contemples las siguientes opciones.</li>
+				Cuando tengas que hacer un desplazamiento en coche, recuerda que para desplazarte t&uacute;,<br/> 
+				tambi&eacute;n tienes que trasladar alrededor de 1.200 Kg., con el consiguiente derroche de energ&iacute;a.
+				 As&iacute; que recomendamos que antes contemples las siguientes opciones.</li>
 		<p>
 
 
-			<li><big><b>Convierte en ético tu dinero</b></big><br/>
+			<li><big><b>Convierte en &eacute;tico tu dinero</b></big><br/>
 
-				Tus ahorros financian actividades que mejoran el mundo o lo empeoran, tú decides. 
-				Cámbiate a la banca ética y con un simple trámite, harás mucho por el medio ambiente.<br/>
-				Siéntete a gusto con tus ahorros, además de tenerlos más seguros.</li>
+				Tus ahorros financian actividades que mejoran el mundo o lo empeoran, t&uacute; decides. 
+				C&aacute;mbiate a la banca &eacute;tica y con un simple tr&aacute;mite, har&aacute;s mucho por el medio ambiente.<br/>
+				Si&eacute;ntete a gusto con tus ahorros, adem&aacute;s de tenerlos m&aacute;s seguros.</li>
 		</p>
 		<p>
 
-			<li><big><b>Compra local, ecológico y consume menos carne</b></big><br/>
+			<li><big><b>Compra local, ecol&oacute;gico y consume menos carne</b></big><br/>
 
 				Con cada compra se tiene la posibilidad de premiar a los mejores y rechazar a los peores,
-				exigiendo el cumplimiento de determinadas garantías sociales,<br/> laborales y medio ambientales.
+				exigiendo el cumplimiento de determinadas garant&iacute;as sociales,<br/> laborales y medio ambientales.
 				Esto es especialmente importante con la comida.</li>
 		</p>
 		<p>
