--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 			<link rel="stylesheet" href="estilos.css" type="text/css" media="all">
 			<center><big><h1>El cambio clim&aacute;tico</h1></big></center><hr/>
-			<title>El cambio climático</title>
+			<title>El cambio clim&aacute;tico</title>
 
 			<div id="header"><br>
 			</div>
@@ -56,7 +56,7 @@
 
 
 			<div class="dropdown">
-			<button class="dropbtn">Otras páginas</button>
+			<button class="dropbtn">Otras p&aacute;ginas</button>
 			<div class="dropdown-content">
  
 			<a href="causas.html">Causas</a>
@@ -73,45 +73,44 @@
 		<p>	
 			<div>
 
-			<img src="index1.jpg" style="float:right;" border="2" width="37%"></br>
+			<img src="index1.jpg" style="float:right;" border="2" width="38%"></br>
 
 			</div>
-			<center><h2><u>¿Qué es el cambio climático?</u></h2></center>
+			<center><h2><u>&#191;Qu&eacute; es el cambio clim&aacute;tico?</u></h2></center>
 				<FONT SIZE=4>
 					<p>
-					El cambio climático es el término general para el cambio en los fenómenos climáticos mundiales
+					El cambio clim&aacute;tico es el t&eacute;rmino general para el cambio en los fen&oacute;menos clim&aacute;ticos mundiales
 			 		asociados con un aumento  en las temperaturas promedio globales.
-					Es real y las temperaturas han estado subiendo alrededor del mundo por muchas décadas.
+					Es real y las temperaturas han estado subiendo alrededor del mundo por muchas d&eacute;cadas.
 					</p>
 					<p>
-					Es uno de los mayores desafíos de nuestro tiempo. Las alteraciones en los patrones de los eventos climatológicos y 
-					las temperaturas extremas son cada vez más comunes y aumentarán si hay una mayor concentración de gases de efecto invernadero. 
-					El cambio climático pone en riesgo la salud, la seguridad alimentaria y energética,
-					 así como el acceso al agua de millones de personas.</br>
-					<i>"El cambio climático constituye la mayor amenaza medioambiental a la que se enfrenta la humanidad."</i>
+					Es uno de los mayores desaf&iacute;os de nuestro tiempo. Las alteraciones en los patrones de los eventos climatol&oacute;gicos y 
+					las temperaturas extremas son cada vez m&aacute;s comunes y aumentarán si hay una mayor concentraci&oacute;n de gases de efecto invernadero. 
+					El cambio clim&aacute;tico pone en riesgo la salud, la seguridad alimentaria y energ&eacute;tica,
+					 as&iacute; como el acceso al agua de millones de personas.</br>
+					<i>"El cambio clim&aacute;tico constituye la mayor amenaza medioambiental a la que se enfrenta la humanidad."</i>
 					</p>
 				</font>
 
 			
 		</p>
 		
-
 		<p>
 			<center>
-			<h2><u>Evidencia global del cambio climático</u></h2>
+			<h2><u>Evidencia global del cambio clim&aacute;tico</u></h2>
 			</center>
-			<table width="100%" border="0">
+			<table width="100%" border="1">
 				<tr>
-				<td><img src="1950.png" align="right" border="1" width="50%"></td>
-				<td><img src="2016.png" align="center" border="1" width="50%"></td> 
+				<td><img src="1950.png" align="right" border="1" width="60%"></td>
+				<td><img src="2016.png" align="center" border="1" width="60%"></td> 
 				</tr>
 			</table>
 		</p>
 		<p>
-			<table width="100%" border="0">
+			<table width="100%" border="1">
 				<tr>
-				<td><img src="1979.png" align="right" border="1" width="50%"></td>
-				<td><img src="2016(2).png" align="center" border="1" width="50%"></td> 
+				<td><img src="1979.png" align="right" border="1" width="60%"></td>
+				<td><img src="2016(2).png" align="center" border="1" width="60%"></td> 
 				</tr>
 			</table>
 
@@ -119,7 +118,7 @@
 
 		
 		
-		<p> <center><h3><u>Vídeo explicativo acerca del cambio climatico</u><h3></center></p>
+		<p> <center><h3><u>V&iacute;deo explicativo acerca del cambio clim&aacute;tico</u><h3></center></p>
 		
 
 		<p>
