--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					</p>
 					<p>
 					Es uno de los mayores desaf&iacute;os de nuestro tiempo. Las alteraciones en los patrones de los eventos climatol&oacute;gicos y 
-					las temperaturas extremas son cada vez m&aacute;s comunes y aumentarán si hay una mayor concentraci&oacute;n de gases de efecto invernadero. 
+					las temperaturas extremas son cada vez m&aacute;s comunes y aumentar&aacute;n si hay una mayor concentraci&oacute;n de gases de efecto invernadero. 
 					El cambio clim&aacute;tico pone en riesgo la salud, la seguridad alimentaria y energ&eacute;tica,
 					 as&iacute; como el acceso al agua de millones de personas.</br>
 					<i>"El cambio clim&aacute;tico constituye la mayor amenaza medioambiental a la que se enfrenta la humanidad."</i>
