--- a/causas.html
+++ b/causas.html
@@ -84,10 +84,10 @@
 				<li>Di&oacute;xido de carbono (CO2)</li><br/>
 				<li>Metano (CH4)</li><br/>
 				<li>Compuestos halogenados</li> <br/>
-				<li>Ozono troposférico (O3)</li><br/>
-				<li>Óxido de nitr&oacute;geno (N2O)</li><br/>
+				<li>Ozono troposf&eacute;rico (O3)</li><br/>
+				<li>&Oacute;xido de nitr&oacute;geno (N2O)</li><br/>
 			
-				Estos compuestos son provocados principalmente por la quema de combustibles f&oacute;siles, por el transporte, la ganadería,la industria del carb&oacute;n,<br/>
+				Estos compuestos son provocados principalmente por la quema de combustibles f&oacute;siles, por el transporte, la ganader&iacute;a,la industria del carb&oacute;n,<br/>
 		 		la actividad qu&iacute;mica o el tratamiento de aguas residuales.<br/>
 			</ol>
 		</p>
@@ -97,8 +97,8 @@
 		<big><li><b><u>La deforestaci&oacute;n:</u></b></li></big><br/>
 			<ol>
 			<li>Los bosques son sumideros naturales de carbono que mediante la fotos&iacute;ntesis absorben CO2 y devuelven ox&iacute;geno a la atm&oacute;sfera.</li><br/>
-			<li>La deforestación se relaciona con el cambio clim&aacute;tico pues cada vez que se pierden bosques se liberan gases de efecto invernadero,<br/>
-			 	como CO2, que estaban cubiertos bajo los árboles. Adem&aacute;s, se provoca desabasto de agua y p&eacute;rdida de biodiversidad.</li><br/>
+			<li>La deforestaci&oacute;n se relaciona con el cambio clim&aacute;tico pues cada vez que se pierden bosques se liberan gases de efecto invernadero,<br/>
+			 	como CO2, que estaban cubiertos bajo los &aacute;rboles. Adem&aacute;s, se provoca desabasto de agua y p&eacute;rdida de biodiversidad.</li><br/>
 			<li>Cada vez que se pierde un bosque se liberan 300 mil millones de toneladas de di&oacute;xido de carbono,<br/>
 				 equivalente a 40 veces las emisiones anuales de este gas por quemar combustibles f&oacute;siles como carb&oacute;n o petr&oacute;leo.</li><br/>
 			<li>El 20% de las emisiones de gases de efecto invernadero a nivel mundial provienen de la p&eacute;rdida de ecosistemas forestales,<br/>
@@ -120,7 +120,7 @@
 		<big><li><b><u>Aumento de la poblaci&oacute;n:</u></b></li></big><br/>
 			<ol>
 			Una poblaci&oacute;n cada vez m&aacute;s numerosa necesita cada vez m&aacute;s recursos,<br/>
-			 lo que acelera el aumento de la emisión de gases de efecto invernadero en todos los procesos de producci&aacute;n.<br/>
+			 lo que acelera el aumento de la emisi&oacute;n de gases de efecto invernadero en todos los procesos de producci&oacute;n.<br/>
 			</ol>
 		</p>
 
