--- a/consecuencias.html
+++ b/consecuencias.html
@@ -99,7 +99,7 @@
 
 </li>		
 			<ol>
-				<li>-Da&ntilde;os en las cosechas y en la producción alimentaria.</li><br/>
+				<li>-Da&ntilde;os en las cosechas y en la producci&oacute;n alimentaria.</li><br/>
 		
 				<li>-Las sequ&iacute;as.</li><br/>
 		
@@ -128,7 +128,7 @@
 			<caption><h2><u>Tabla en la que podemos observar el aumento de temperaturas:</u></h2></caption>
 	
 			<tr>
-			<td><big><b>Años:</b></big></td>
+			<td><big><b>A&ntilde;os:</b></big></td>
 			<td>1901-1910</td>
 			<td>1911-1920</td>
 			<td>1921-1930</td>
