--- a/soluciones.html
+++ b/soluciones.html
@@ -119,7 +119,7 @@
 			<li><big><b>Colabora con alguna ONG y ve menos la tele</b></big><br/>
 
 				Las ONGs son herramientas fundamentales para la defensa de las causas sociales y medioambientales.<br/>
-				 Si ayudas a una ONG ayudas al mundo, y si disminuyes el consumo televisivo también.</li>
+				 Si ayudas a una ONG ayudas al mundo, y si disminuyes el consumo televisivo tambi&eacute;n.</li>
 		</p>
 			</ol>		
 
